Fix footer spacing

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -4,7 +4,6 @@
 
 footer {
   font-size: .9rem;
-  margin-top: 20px;
   padding-top: 15px;
   padding-bottom: 15px;
   border-top: 1px solid $light;
